[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testing-agent"  # TODO: Rename to your agent name
version = "0.1.0"
description = "Competition agent for Wargaming 4 All"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}  # TODO: Update with your info
]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "w4a",
    "SimulationInterface",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[project.urls]
Homepage = "https://war.game"
Repository = "https://github.com/CodeMetalAI/w4a"
